--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,7 +4,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
+    <link href="~/Content/bootstrap.css" rel="stylesheet" />
+    <link href="~/Content/Site.css" rel="stylesheet" />
+    <link href="~/Content/SweetAlert/SweetAlert.css" rel="stylesheet" />
     @Styles.Render("~/Content/css")
+
+    <link href="~/Content/DataTables/datatables.css" rel="stylesheet" />
+    @*<link href="https://cdn.datatables.net/2.1.3/css/dataTables.dataTables.css" rel="stylesheet" />*@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
@@ -17,7 +23,8 @@
             </button>
             <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
-                    <li>@Html.ActionLink("Employees", "Create", "Employees", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Employees", "Index", "Employees", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Pay_EmployeeGender", "Index", "Pay_EmployeeGender", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("About", "About", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
@@ -35,6 +42,13 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    <script src="~/Content/DataTables/datatables.js"></script>
+    <script src="~/Content/dateTimePicker/dist/date-time-picker.min.js"></script>
+    <script src="~/Content/SweetAlert/SweetAlerMin.js"></script>
+
+    @*<script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+        <script src="https://cdn.datatables.net/2.1.3/js/dataTables.js"></script>*@
+
     @RenderSection("scripts", required: false)
 </body>
 </html>
